Corrected alignment issues

--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -40,7 +40,7 @@
     > .item > .url > .title
         margin: 0
         width: 75%
-        font-weight: 400
+        font-weight: 500
         transition: all ease-in-out .2s
 
     > .item:hover > .url > .title
